--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt,draft,oldfontcommands,oneside,letterpaper]{memoir}
+\documentclass[12pt,final,oldfontcommands,oneside,letterpaper]{memoir}
 \RequirePackage[final]{graphicx}
 \usepackage{citthesis}
 \usepackage{silence}
